# mobile_robotics_hw

./: README.md
descriptions/: Ps0.docx  Ps3-new.docx  Ps3.docx  Ps4.docx  Ps4.odt  Ps5.docx  Ps5.odt  Ps6.docx  Ps7.docx  Ps7.odt  StudentInit.docx  VLabsTutorialv2.docx
software/mcl_ws/: README.md
software/uml_hmm/: CMakeLists.txt  README.md
software/uml_nav/: CMakeLists.txt  package.xml
software/uml_nav/launch/: amcl.launch  init_world.launch  map_server.launch  move_base.launch  uml_nav.launch
software/uml_nav/scripts/: keyboard_teleop.py  remap_laser.py  send_goal.bash
software/uml_nav/share/: map.yaml  robots.inc  sensors.inc  uml_nav.rviz  willow-erratic.world
software/uml_nav/share/nav_config/robot_brain_1/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml
vlabs/: DOTbashrc
